Ver.1.10.0:
+ added tags $hddtotmb, $hddtotgb
+ added tags $memtotmb, $memtotgb, $swaptotmb, $swaptotgb
+ added ability for force update text
+ added support of clementine
+ added support of hddtemp cmd
+ added support of disable option for HDDDEV and GPUDEV
+ added error checking of DataEngine variables
+ added ability to disable popup messages
+ added ability to use vertical layout
+ added Brazillian Portuguese translation (@underr)
+ added Ukrainian translation (Виктор Слободян)
- removed util.py
- removed createNotifyrc since it isn't needed
* refactoring of configuration interface
* player settings was moved from plasmoid to dataengine
* edited readme call
* changed readme from md to html

Ver.1.9.0:
+ added support of several custom commands ($customN)
+ added hdd speed label ($hddrN, $hddwN)
+ added actions to context menu (open readme and run ksysguard)
- removed doubleclick event
* fix parsing pkg label

Ver.1.8.3:
+ added Spanish translation (thanks to Ernesto Avilés Vzqz)
+ added readme to the package

Ver.1.8.2:
+ added different temperature units (Farenheit and Kelvin)

Ver.1.8.1:
* change pkg update time to hour

Ver.1.8.0:
+ added scrollbar to configuration interface
+ added AC lines configuration
+ added $hddmbN, %hddgbN tags
+ added support of ps ($ps, $pscount, $pstotal tags)
+ added support of package managers ($pkgcountN tags)
* refactoring of DataEngine

Ver.1.7.4:
+ added support more than 10 tags in cpu, cpuclock, hdd, hddtemp, temp labels
- format bug fixes
* changes in custom uptime format

Ver.1.7.3:
+ added tags $memgb, $swapgb
+ added readme directory
+ added french translation (@Mermouy)
- fix tooltip for custom uptime format
- fix #12
* more refactoring to the god of refactoring
* network device update interval now is 30*interval
* $swap, $swapmb and $swapgb tags now work simultaneously ($mem* tags too)
* player_name now has str type

Ver.1.7.2:
+ added tags $dd, $d, $hh, $h, $mm, $m to custom uptime format
+ added scalling to tooltips