@@ -8,6 +8,7 @@
 + добавлена проверка ошибок для переменных DataEngine
 + добавлена возможность отключения всплывающих сообщений
 + добавлена возможность использовать вертикальную разметку
++ добавлена возможность вывод отладочной информации в DataEngine
 + добавлен перевод Brazillian Portuguese (@underr)
 + добавлена украинская локализация (Виктор Слободян)
 - удален util.py
