@@ -30,3 +30,6 @@
 
 # Player name. Supported players are amarok, clementine, mpd, qmmp
 #PLAYER=amarok
+
+# Enable some debug information (yes or no)
+#DEBUG=no
